--- a/laravel-angular-front/src/app/components/signup/signup.component.html
+++ b/laravel-angular-front/src/app/components/signup/signup.component.html
@@ -1,1 +1,50 @@
-<p>signup works!</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Sign Up Here</div>
+    <div class="card-body">
+      <form #signUpform=ngForm (ngSubmit)="onSubmit()">
+
+        <div class="form-group row">
+          <label for="inputName3" class="col-sm-2 col-form-label" >Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputName3" [(ngModel)]="form.name" name="name" required>
+            <div class="alert alert-danger" [hidden]="!error.name">
+              {{error.name}}
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label" >Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" [(ngModel)]="form.email" name="email" required>
+            <div class="alert alert-danger" [hidden]="!error.email">
+              {{error.email}}
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" [(ngModel)]="form.password" name="password" required>
+            <div class="alert alert-danger" [hidden]="!error.password">
+              {{error.password}}
+            </div>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPasswordConfirm3" class="col-sm-2 col-form-label">Confirm Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPasswordConfirm3" [(ngModel)]="form.password_confirmation" name="password_confirmation" required>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm offset-2">
+            <button type="submit" class="btn btn-primary" [disabled]="!signUpform.valid">Sign Up</button>
+            <!--<a routerLink="/signup" class="btn btn-info float-right" >Sign up</a>-->
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
