--- a/laravel-angular-front/src/app/components/password/request-reset/request-reset.component.html
+++ b/laravel-angular-front/src/app/components/password/request-reset/request-reset.component.html
@@ -1,1 +1,26 @@
-<p>request-reset works!</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Send Email to Reset Password</div>
+    <div class="card-body">
+      <form #RequestResetForm=ngForm (ngSubmit)="onSubmit()">
+        <div class="alert alert-danger" [hidden]="!error">
+          {{error}}
+        </div>
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label" >Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" [(ngModel)]="form.email" name="email" required>
+          </div>
+        </div>
+
+
+        <div class="form-group row">
+          <div class="col-sm offset-2">
+            <button type="submit" class="btn btn-primary" [disabled]="!RequestResetForm.valid">Send Pwd Reset Email</button>
+          </div>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
