--- a/laravel-angular-front/src/app/components/password/response-reset/response-reset.component.html
+++ b/laravel-angular-front/src/app/components/password/response-reset/response-reset.component.html
@@ -1,1 +1,37 @@
-<p>response-reset works!</p>
+<div class="mt-4 col-8 offset-2">
+  <div class="card">
+    <div class="card-header">Reset Password</div>
+    <div class="card-body">
+      <form #resetPasswordForm=ngForm (ngSubmit)="onSubmit()">
+        {{form.reset_token}}
+        <div class="form-group row">
+          <label for="inputEmail3" class="col-sm-2 col-form-label" >Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" [(ngModel)]="form.email" name="email" required>
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" [(ngModel)]="form.password" name="password" required>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="inputConfPassword3" class="col-sm-2 col-form-label">Confirm Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputConfPassword3" [(ngModel)]="form.password_confirm" name="password_confirm" required>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm offset-2">
+            <button type="submit" class="btn btn-primary" [disabled]="!resetPasswordForm.valid">Change Password</button>
+
+          </div>
+        </div>
+
+      </form>
+    </div>
+  </div>
+</div>
